2001-12-18  Bruno Haible  <bruno@clisp.org>

	* Makefile.in (LTV_CURRENT, LTV_REVISION, LTV_AGE): Bump to 2:0:0.
	Used to force an soname of at least libintl.so.2 on Solaris, which
	already has a different libintl.so.1 in /usr/lib.

2001-12-15  Andrew Zabolotny  <zap@cobra.ru>
	    Bruno Haible  <bruno@clisp.org>

	* osdep.c: New file.
	* os2.c: New file.
	* dcigettext.c (DCIGETTEXT): Add backward compatibility support for
	OS/2.
	* localcharset.c: Add OS/2 support.
	* localealias.c (_nl_expand_alias): Initialize locale_alias_path once,
	but not statically.
	* Makefile.in (COMSRCS): Add osdep.c, os2.c.
	(OBJECTS): Add osdep.$lo.

2001-12-12  Bruno Haible  <bruno@clisp.org>

	* libgettext.h [!ENABLE_NLS]: Cast all function results to
	'const char *'.
	Reported by Alexandre Duret-Lutz <duret_g@lrde.epita.fr>.

2001-12-03  Bruno Haible  <bruno@clisp.org>

	* Makefile.in (install-exec): Don't create an empty libdir.
	(installdirs): Update accordingly.

2001-11-30  Bruno Haible  <bruno@clisp.org>

	* plural-exp.h (plural_eval): Add back declaration.
	* Makefile.in (OBJECTS): Remove plural-eval.$lo.
	(COMSRCS): Remove plural-eval.c.
	(COMHDRS): Add plural-eval.c.
	(plural-eval.$lo): Remove dependency.
	(dcigettext.$lo): Depend on plural-eval.c.

2001-11-29  Bruno Haible  <bruno@clisp.org>

	* gettextP.h (_nl_locale_name): Don't declare inside glibc.
	* localename.c (_nl_locale_name): Remove _LIBC conditional.

2001-11-27  Ulrich Drepper  <drepper@redhat.com>

	* dcigettext.c (guess_category_value): Inside glibc, use setlocale
	directly, not _nl_locale_name.

2001-11-27  Ulrich Drepper  <drepper@redhat.com>

	* loadmsgcat.c (_nl_init_domain_conv): Modify #if expression.

2001-11-27  Ulrich Drepper  <drepper@redhat.com>

	* plural-eval.c (plural_eval): Rename back from PLURAL_EVAL.
	* plural-exp.h (PLURAL_EVAL): Remove declaration.
	* dcigettext.c Include plural-eval.c.
	(plural_lookup): Call plural_eval instead of PLURAL_EVAL.

2001-11-22  Bruno Haible  <bruno@clisp.org>
