@@ -1,3 +1,13 @@
+2001-12-21  Bruno Haible  <bruno@clisp.org>
+
+	* gmo.h: Renamed from gettext.h.
+	* gettext.h: Remove file.
+	* gettextP.h: Update accordingly.
+	* loadmsgcat.c: Likewise.
+	* Makefile.in (COMHDRS): Add gmo.h, remove gettext.h.
+	(DISTFILES.obsolete): Add gettext.h.
+	Update dependencies.
+
 2001-12-18  Bruno Haible  <bruno@clisp.org>
 
 	* Makefile.in (LTV_CURRENT, LTV_REVISION, LTV_AGE): Bump to 2:0:0.
